# coco_bonus_project

./: .gitignore  README.md  assignment.ipynb  pyproject.toml  test_controller.py
coco_rocket_lander/: __init__.py  utils.py  utils_sim.py
coco_rocket_lander/algs/: __init__.py  controller.py  mpc.py  pid.py
coco_rocket_lander/env/: __init__.py  env_cfg.py  rocketlander.py  system_model.py
extract_measurements/: evaluation_PID_controller_flight_data.csv  evaluation_PID_controller_user_args.csv
submission_folder/: submission.ipynb
submission_folder/pid_controller_SOP/: evaluation_PID_controller_flight_data.csv  evaluation_PID_controller_user_args.csv
submission_folder/src/: __init__.py  mpc.py  plot.py  stand.py  test_scenarios.py  user_args.py  utils.py
